# jobpilot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.local/: jobpilot_connect_task.xml  jobpilot_report_task.xml  jobpilot_task.xml  run_hidden.ps1  run_hidden.vbs  startup_apply.bat  startup_connect.bat  startup_report.bat
docs/: README.md  architecture.md  cli.md  configuration.md  scheduled-tasks.md  search-builder.md
src/automation/: url_builder.py
src/automation/pages/: __init__.py  glassdoor_jobs_page.py  indeed_jobs_page.py  jobs_search_page.py  linkedin_search_page.py  people_search_page.py
src/automation/tasks/: base_application_manager.py  connection_manager.py  glassdoor_application_manager.py  indeed_application_manager.py  job_application_manager.py  linkedin_application_manager.py
src/bot/: telegram_bot.py
src/cli/: answers_commands.py  answers_logic.py  apply_command.py  apply_logic.py  browser.py  connect_command.py  connect_logic.py  enums.py  misc_commands.py  misc_logic.py  persistence.py  provider_commands.py  provider_logic.py  report_command.py  report_logic.py  router.py  skills_commands.py  skills_logic.py
src/config/: settings.py
src/core/ai/: llm_provider.py
src/core/use_cases/: applied_jobs_tracker.py  indeed_application_handler.py  invitation_handler.py  job_application_handler.py  job_evaluator.py  monthly_report.py  salary_estimator.py  skills_tracker.py
src/utils/: logger.py  telegram.py  tui.py
