[project]
name = "jobpilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "ruff>=0.14.5",
    "playwright>=1.59.0",
    "playwright-stealth>=2.0.0",
    "claude-agent-sdk>=0.0.14",
    "pypdf>=5.0.0",
    "setuptools>=82.0.1",
    "requests>=2.33.1",
    "langchain-ollama>=0.2.0",
    "langchain-deepseek>=0.1.0",
    "typer>=0.15.0",
    "rich>=13.0",
    "textual>=0.80.0",
]
